# socialgraph

contract/: Cargo.toml
contract/res/: rust_template.wasm  social_graph.wasm
contract/src/: lib.rs
graph-cli/: Cargo.toml
graph-cli/src/: graph.rs  main.rs  query.rs
src/: lib.rs
