[package]
name = "graph-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-jsonrpc-client = { git = "https://github.com/near/near-jsonrpc-client-rs.git", rev = "538b6c9fa627715b578b36cac7ff33c5410ef1d6" }
near-jsonrpc-primitives = "0.10.0"
near-crypto = "0.10.0"
near-primitives = "0.10.0"
tokio = { version = "1", features = ["macros"] }
serde = {version = "1.0.131", features = ["derive"]}
serde_json = {version = "1.0.66"}

petgraph = "0.6"